# RaiFlow

./: .gitignore  CONTRIBUTIONS.md  README.md  changelog.md  pyproject.toml  raiflow-report.json  raiflow.yaml.example  raiflow_compliance_walkthrough.ipynb  requirements.txt  server.py
.github/workflows/: compliance.yml  rai-compliance.yml
docs/: contribute.html  docs.html  index.html  style.css
examples/: ci_cd_compliance_check.py  compliance_report_demo.json  dejure_demo.py  enterprise_rag_pipeline.py  final_assessment.py  generate_report.py  multi_framework_demo.py  real_rag_integration.py  real_world_audit.py  shield_demo.py  stress_test.py
policies/: eu_ai_act.yaml  eu_ai_act_real.yaml  nist_ai_rmf.yaml
policies/raw/: article_10.md  article_10_official.md  article_13.md  article_13_official.md
raiflow/: __init__.py  analyzer.py  cli.py  dashboard_server.py  engine.py  framework_registry.py  gate.py  generator.py  ingestor.py  interceptor.py  llm_setup.py  manifest.py  reporter.py  scaffolder.py  scanner.py  shield.py
raiflow/dashboard/: hackthon-context.txt  index.html  index.src.html  package-lock.json  package.json
raiflow/data/: rai-compliance.yml
raiflow/evaluators/: eu_ai_act.py  faithfulness.py  (+4 more)
tests/: compliance_test.py  conftest.py  eu_ai_act_test.py  test_cli.py  test_developer_dashboard.py  test_developer_dashboard_property.py  test_gate.py  test_generator.py  test_generator_property.py  test_init_cmd.py  test_init_cmd_property.py  test_live_dashboard.py  test_live_dashboard_property.py  test_manifest.py  test_manifest_property.py  test_reporter.py  test_reporter_property.py  test_semantic_evaluators.py
(+3 files in other folders)
